@@ -25,6 +25,7 @@
 #define RcppCommon_h
 
 #include <Rcpp/config.h>
+#include <Rcpp/macros/unroll.h>
 
 void logTxtFunction(const char* file, const int line, const char* expression ) ;
 
